--- a/index.html
+++ b/index.html
@@ -259,19 +259,13 @@
 								<a class="contacts__links-opentable base-link" href="#">Ссылка на opentable</a>
 								<ul class="contacts__links-list base-list">
 									<li class="contacts__links-item">
-										<a class="contacts__links-wrapper base-link" href="#">
-											<img class="contacts__links-img" src="img/image/content/socials-1.svg" width="30" height="30" alt="">
-										</a>
+										<a class="contacts__links-wrapper base-link" href="#"></a>
 									</li>
 									<li class="contacts__links-item">
-										<a class="contacts__links-wrapper base-link" href="#">
-											<img class="contacts__links-img" src="img/image/content/socials-2.svg" width="30" height="30" alt="">
-										</a>
+										<a class="contacts__links-wrapper base-link" href="#"></a>
 									</li>
 									<li class="contacts__links-item">
-										<a class="contacts__links-wrapper base-link" href="#">
-											<img class="contacts__links-img" src="img/image/content/socials-3.svg" width="30" height="30" alt="">
-										</a>
+										<a class="contacts__links-wrapper base-link" href="#"></a>
 									</li>
 								</ul>
 							</div>
