--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,6 @@
 		</nav>
 	</header>
 	<main class="page-content">
-
 		<section class="heading">
 			<div class="heading__slider swiper">
 				<div class="heading__slider-wrapper swiper-wrapper">
@@ -95,6 +94,21 @@
 					</div>
 					<div class="heading__slider-item swiper-slide">
 						<img class="heading__slider-img" src="img/image/design/heading-slide-2.jpg" alt="slide-2">
+					</div>
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-3.jpg" alt="slide-3">
+					</div>
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-4.jpg" alt="slide-4">
+					</div>
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-5.jpg" alt="slide-5">
+					</div>
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-6.jpg" alt="slide-6">
+					</div>
+					<div class="heading__slider-item swiper-slide">
+						<img class="heading__slider-img" src="img/image/design/heading-slide-7.jpg" alt="slide-7">
 					</div>
 				</div>
 			</div>
@@ -115,20 +129,64 @@
 			<div class="about__container base-container">
 				<div class="about__subject" id="subject">
 					<div class="about__subject-inner about__desc">
-						<h2>О ресторане</h2>
+						<h2>Mission & Vision</h2>
 						<div class="about__subject-text">
 							<p>
-								Pipa Lounge — новое место для ценителей
-								прекрасных видом города, комфорта и изысканной кухни.
-								Из наших окон открывается живописный вид на городской ландшафт.
-								Просторный зал нашего ресторана вмещает около 150 гостей, а
-								ещё 220 могут расположиться на террасе, что делает Pipa Lounge,
-								идеальным местом для проведения незабываемых мероприятий,
-								торжеств и банкета, детского праздника или просто дружеской вечеринки.<br>
+								<strong>Mission</strong><br>
+								Create a unique atmosphere for Pipa Lounge 
+								guests based on high standards of service quality. 
+								Giving a new, bright, gastronomic experience and 
+								immersing in fragrant, relaxing evenings filled with 
+								smoky hookahs of the highest quality. 
+								Everything should serve the idea that a 
+								guest coming here pauses the dynamics of 
+								everyday life, plunges into the pipa lounge 
+								atmosphere and dissolves into it (even if he came for half an hour). 
+								Pipa Lounge is a portal to another reality, 
+								it is an endless harmony of tastes, aromas and 
+								communication that allows our guests to enjoy 
+								life in the moment and come back to us again and 
+								again.<br>
 								<br>
-								Открытый камин в центре зала поможет нашим гостям насладиться домашним уютом.
-								Любителям активного отдыха мы предложим развлечения в летней зоне под открытым
-								небом, где ваши встречи наполнятся роматическими впечатлениями.
+								<strong>Vision</strong><br>
+								Create a network of spaces in which our guests will 
+								feel comfortable and safe, enjoy the gastronomic 
+								experience and relax by slowing the time down around 
+								them and immersing themselves in the atmosphere. 
+								Pipa Lounge is a point of attraction for many people, 
+								a place, where it is always delicious and guests are always welcome. 
+								Pipa Lounge is a religion based on the harmony of taste, visual and self-love.
+							</p>
+						</div>
+					</div>
+				</div>
+				<a class="about__move-button move-button base-link" href="#subject_2">
+					<svg class="move-button__arrow-icon" width="15" height="63" alt="">
+						<use href="img/icon/sprite.svg#arrow-icon"></use>
+					</svg>
+				</a>
+				<div class="about__subject about__subject--2" id="subject_2">
+					<div class="about__subject-inner about__desc">
+						<h2>Goal & Values</h2>
+						<div class="about__subject-text">
+							<p>
+								<strong>Goal</strong><br>
+								We work so that every guest of our establishment can feel cared for, 
+								disconnect from their affairs/problems and relax. 
+								For us, the highest manifestation of loyalty is 
+								a satisfied guests who returns again and again.<br>
+								<br>
+								<strong>Values</strong><br>
+								Our team consists of specialists from different fields, we appreciate such things as:<br>
+								<ul>
+									<li>Communication skills</li>
+									<li>Initiatives</li>
+									<li>Professional skills</li>
+									<li>Willingness to help a colleague</li>
+									<li>Carrying</li>
+									<li>Constant self-development</li>
+									<li>The ability to take responsibility</li>
+								</ul>								
 							</p>
 						</div>
 					</div>
@@ -149,7 +207,7 @@
 								приготовления пиццы.
 							</p>
 						</div>
-						<ul class="about__menu-links base-list">
+						<ul class="about__menu-links base-list" id="desc_buttons">
 							<li>
 								<a class="about__menu-link order-button base-link" href="#">
 									<span class="order-button__text">Основное меню</span>
